# grpc_test

./: CMakeLists.txt  main.cpp
grpc_server/: CMakeLists.txt  DoctorConsoleBackend.cpp  DoctorConsoleBackend.hpp  DoctorConsoleService.grpc.pb.cc  DoctorConsoleService.grpc.pb.h  DoctorConsoleService.pb.cc  DoctorConsoleService.pb.h  ServerRunner.cpp  ServerRunner.hpp  main.cpp
proto/: DoctorConsoleService.proto
qml/: Main.qml
